--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-
+    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+    implementation group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
