editions 25 de junio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,16 @@
     package="android.mobilequare.analyst">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" /> <!--$A-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileQUARE">
-        <activity android:name=".AnalystMenuView" android:screenOrientation="fullUser">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.MobileQUARE"> <!--$E-->
+        <activity android:name=".AnalystMenuView" android:screenOrientation="portrait"> <!--$E-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
